@@ -45,7 +45,7 @@ if(isset($_SESSION['ipamlanguage'])) {
 /* set latest version */
 define("VERSION", "0.84");									//version changes if database structure changes
 /* set latest revision */
-define("REVISION", "008");									//revision always changes, verision only if database structure changes
+define("REVISION", "009");									//revision always changes, verision only if database structure changes
 /* set last possible upgrade */
 define("LAST_POSSIBLE", "0.8");								//minimum required version to be able to upgrade
 
